--- a/src/app/components/note-creator/note-creator.component.html
+++ b/src/app/components/note-creator/note-creator.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="container" [ngStyle]="{'width.px':width}">
         <div class="avatar-container">
-            <img id="avatar" src="../../../assets/dumy.jpg" />
+            <img id="avatar" src="nada" onerror="this.src='../assets/profile.png'" />
         </div>
         <div class="form-container">
             <form class="new-post-form">
