--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,8 @@
                     cargando..
                 </ng-container>
                 <app-note *ngFor="let nota of notas" [titulo]="nota.titulo" [contenido]="nota.contenido"
-                    [comentarios]="nota.comentarios" [fecha]="nota.fechaNota" [usuario]="nota.usuario"></app-note>
+                    [comentarios]="nota.comentarios" [fecha]="nota.fechaNota" [usuario]="nota.usuario"
+                    [idNota]="nota.idNota"></app-note>
 
             </div>
         </div>
