--- a/src/app/components/response/response.component.html
+++ b/src/app/components/response/response.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="usuario">@{{usuario.nombreUsuario}}</div>
+    <div class="usuario">@{{usuario.nombreUsuario}}{{interno?' (empleado)':' (externo)'}}</div>
     <div class="contenido">{{contenido}}</div>
     <div class="fecha">{{fecha|date}}</div>
 </div>
